@@ -1,0 +1,4 @@
+@ECHO OFF
+REM Supports windows-specific shortname tests in test_chdir.py
+echo %~s1
+
